update(scripts): Added a  script to compile the typescript code, moved the sol build script to .

--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "test:merkle": "mocha --require ts-node/register 'test/merkle/merkle.ts' --timeout 5000",
     "test:merkle:sol": "mocha --require ts-node/register 'test/contracts/RollupMerkleUtils.ts' --timeout 5000",
-    "build": "waffle waffle-config.json"
+    "build:sol": "waffle waffle-config.json",
+    "build": "tsc"
   },
   "keywords": [],
   "author": "",
