fix(tsconfig): Fixed the tsconfig.json to include the index and its dependencies in /src.

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -15,5 +15,5 @@
     ],
     "outDir": "./dist"
   },
-  "include": ["src/*.ts", "src/app/db/*.ts"]
+  "include": ["index.ts", "src/*.ts", "src/**/*.ts"]
 }
